# djapi-library

./: .coveragerc  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  djapi-library.yaml  docker-compose-prod_template.yml  docker-compose.yml  env  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema.yml  setup.cfg
accounts/: views.py
apis/: serializers.py  tests.py  urls.py  views.py
books/: admin.py  models.py  tests.py  urls.py  views.py
config/: settings.py  urls.py
docs/: add_book_list.rst  conf.py  contributing.rst  create_book_list.rst  features.rst  index.rst  installing.rst  package_index.rst
htmlcov/: class_index.html  coverage.json  d_1b48200c0765dce8_admin_py.html  d_1b48200c0765dce8_apps_py.html  d_1b48200c0765dce8_models_py.html  d_1b48200c0765dce8_permissions_py.html  d_1b48200c0765dce8_serializers_py.html  d_1b48200c0765dce8_tests_py.html  d_1b48200c0765dce8_urls_py.html  d_1b48200c0765dce8_views_py.html  d_1ea838694151cac8_test_py.html  d_1ea838694151cac8_urls_py.html  d_4f4139bc680f715f_test_views_py.html  d_509fd8af0f7a1b49_admin_py.html  d_509fd8af0f7a1b49_apps_py.html  d_509fd8af0f7a1b49_forms_py.html  d_509fd8af0f7a1b49_models_py.html  d_509fd8af0f7a1b49_urls_py.html  d_509fd8af0f7a1b49_views_py.html  d_9df13ddeb1e47e46_admin_py.html  d_9df13ddeb1e47e46_apps_py.html  d_9df13ddeb1e47e46_forms_py.html  d_9df13ddeb1e47e46_models_py.html  d_9df13ddeb1e47e46_urls_py.html  d_9df13ddeb1e47e46_views_py.html  d_b88c3b5a8ce6a61b_test_forms_py.html  d_b88c3b5a8ce6a61b_test_views_py.html  d_cb0ba35d8fd42a04_admin_py.html  (+47 more)
(+22 files in other folders)
