[tool.black]
line-length = 79
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .venv
  | alembic
  | staticfiles
  | build
  | dist
)/
'''

[tool.poetry]
name = "djapi-library"
version = "0.1.0"
description = "Basic library website & API built with Django & DRF"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "~=4.0.0"
environs = {extras = ["django"], version = "^9.5.0"}
djangorestframework = "~=3.13.0"
whitenoise = "6.2.0"
gunicorn = "~=20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
